--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -19,6 +19,11 @@
 a {
 	text-decoration: none;
 }
+#xianshi{
+padding:0px;
+margin-left: 0px;
+float: left;
+}
 </style>
 <script type="text/javascript">
 
@@ -52,7 +57,7 @@ a {
         		 var monthdata=json.reportdata.monthData.split('|');
         		 
         		var busiData=json.reportdata.busiData;
-        		var imgString="<ul style='list-style:none;'><li><div style='float:left;width:60px;'>&nbsp;</div><div style='float:left;width:50px;'>&nbsp;</div>";
+        		var imgString="<ul style='padding:10px;list-style:none;'><li><div style='float:left;width:60px;'>&nbsp;</div><div style='float:left;width:50px;'>&nbsp;</div>";
         		for(var z=0;z<monthdata.length;z++){
         			imgString=imgString+"<div style='float:left;width:6%;'>"+monthdata[z]+"</div>";
         		}
@@ -79,7 +84,7 @@ a {
         			imgString=imgString+"</li>";
         		 }
         		imgString=imgString+"</ul>";
-        		document.getElementById("aa").innerHTML=imgString;
+        		document.getElementById("xianshi").innerHTML=imgString;
                },
                 "error":function(res){
                     alert("error:" + res);
@@ -92,7 +97,7 @@ a {
 </head>
 <body >
 	<!-- 风险状况 -->
-		<div id="aa" >
+		<div id="xianshi"  >
 		</div>
 </body>
 </html>
