home 页新闻列表完善

--- a/html/home.html
+++ b/html/home.html
@@ -172,7 +172,7 @@
 			<ul id="jttzList" data-role="listview" data-theme="d"
 				style="word-wrap: break-word" data-bind="foreach: list">
 				<li data-icon="false" ><a
-					data-bind="click:showDetailjttz" data-mini="true">
+					data-bind="click:showDetailJttz" data-mini="true">
 						<p>
 							<span
 								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 200px; float: left;"><font
@@ -188,7 +188,7 @@
 			<ul id="jtxwList" data-role="listview" data-theme="d"
 				style="word-wrap: break-word" data-bind="foreach: list">
 				<li data-icon="false" ><a
-					data-bind="click:showDetailjtxw" data-mini="true">
+					data-bind="click:showDetailJtxw" data-mini="true">
 						<p>
 							<span
 								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 200px; float: left;"><font
@@ -204,7 +204,7 @@
 			<ul id="cydwxwList" data-role="listview" data-theme="d"
 				style="word-wrap: break-word" data-bind="foreach: list">
 				<li data-icon="false" ><a
-					data-bind="click:showDetailzgsxw" data-mini="true">
+					data-bind="click:showDetailZgsxw" data-mini="true">
 						<p>
 							<span
 								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 200px; float: left;"><font
