--- a/html/home.html
+++ b/html/home.html
@@ -40,13 +40,13 @@
 			}
 			var itcode = localStorage.getItem("itcode");
 			//默认先加载图片新闻
-			getTpxwNewsList(itcode, "GT_HomePage_SiteArea_tpxw",6,1);
+			getNewsList(itcode, "GT_HomePage_SiteArea_tpxw",6,1);
 			//加载通知公告
-			getTpxwNewsList(itcode, "GT_HomePage_SiteArea_jttz",4,1);
+			getNewsList(itcode, "GT_HomePage_SiteArea_jttz",4,1);
 		    //加载集团新闻
-			getTpxwNewsList(itcode, "GT_HomePage_SiteArea_jtxw",4,1);
+			getNewsList(itcode, "GT_HomePage_SiteArea_jtxw",4,1);
 		    //成员单位新闻
-			getTpxwNewsList(itcode, "GT_HomePage_SiteArea_zgsxw",6,1);
+			getNewsList(itcode, "GT_HomePage_SiteArea_zgsxw",6,1);
 		} catch (e) {
 			alert(e.message);
 		}
@@ -112,6 +112,12 @@
 		$.hori.loadPage($.hori.getconfig().serverBaseUrl
 				+ 'viewhome/html/news/cydwxwList.html');
 	}
+	//按
+	function loadAqsczbb() {
+		$.hori.showLoading();
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/watchlist.html');
+	}
 	
 </script>
 </head>
@@ -161,7 +167,7 @@
 					</a> <br /> <span style="color: #434343; font-size: 12px;"><strong>BI图表</strong></span>
 				</div>
 				<div class="ui-block-c">
-					<a href="javascript:void(0);"> <img width="45" height="45"
+					<a href="javascript:void(0);" onclick="loadAqsczbb()"> <img width="45" height="45"
 						src="../assets/home/aqsc.png">
 					</a> <br /> <span style="color: #434343; font-size: 12px;"><strong>安全生产值班表</strong></span>
 				</div>
