--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>首页</title>
+<title>安全生产值班表详情</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
