更改页面列表项汉字的长度

--- a/html/home.html
+++ b/html/home.html
@@ -135,7 +135,7 @@
 							> <img
 							data-bind="attr:{'src':imgSrc}" />
 							<div>
-								<span class="title" data-bind="text: contentTitle" />
+								<span class="title" data-bind="text: contentTitle" ></span>
 							</div>
 						</a>
 					</div>
@@ -173,7 +173,6 @@
 				</div>
 			</div>
 			<p>
-			
               <div>
 			<ul id="jttzList" data-role="listview" data-theme="d"
 				style="word-wrap: break-word" data-bind="foreach: list">
@@ -181,9 +180,9 @@
 					data-bind="click:showDetailJttz" data-mini="true">
 						<p>
 							<span
-								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 200px; float: left;"><font
+								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 80%; float: left;"><font
 								color="#0080ff">&nbsp;&nbsp;<span data-bind="text:contentTitle"></span></font></span><span><a
-								href="#" style="float: right;"> <font color="#0080ff"><span>2014-08-13&nbsp;&nbsp;</span></font></a></span>
+								href="#" style="float: right;"> <font color="#0080ff"><span>[08-13]&nbsp;&nbsp;</span></font></a></span>
 						</p>
 				</a></li>
 			</ul>
@@ -197,9 +196,9 @@
 					data-bind="click:showDetailJtxw" data-mini="true">
 						<p>
 							<span
-								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 200px; float: left;"><font
+								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 80%; float: left;"><font
 								color="#0080ff">&nbsp;&nbsp;<span data-bind="text:contentTitle"></span></font></span><span><a
-								href="#" style="float: right;"> <font color="#0080ff"><span>2014-08-13&nbsp;&nbsp;</span></font></a></span>
+								href="#" style="float: right;"> <font color="#0080ff"><span>[08-13]&nbsp;&nbsp;</span></font></a></span>
 						</p>
 				</a></li>
 			</ul>
@@ -213,9 +212,9 @@
 					data-bind="click:showDetailZgsxw" data-mini="true">
 						<p>
 							<span
-								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 200px; float: left;"><font
+								style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 80%; float: left;"><font
 								color="#0080ff">&nbsp;&nbsp;<span data-bind="text:contentTitle"></span></font></span><span><a
-								href="#" style="float: right;"> <font color="#0080ff"><span>2014-08-13&nbsp;&nbsp;</span></font></a></span>
+								href="#" style="float: right;"> <font color="#0080ff"><span>[08-13]&nbsp;&nbsp;</span></font></a></span>
 						</p>
 				</a></li>
 			</ul>
