调整登录中首次登录向导按钮样式

--- a/html/login.html
+++ b/html/login.html
@@ -220,7 +220,7 @@
 						<input type="text" name="imageCode" id="imageCode" style="width:80px;"/>
 						</td>
 						<td>
-						<a data-role="button" data-theme="f" data-mini="true" onclick="">获取验证码</a>
+						<a data-role="button" data-theme="f" data-mini="true" onclick="">1234</a>
 						</td></tr>
 					</table>
 				</li>
@@ -245,8 +245,8 @@
 				</div>
 			</div>
 			<div>
-			<div  style="float:center;">
-					<a href="javascript:void(0)" onclick="guide()" data-theme="f" data-role="button" data-icon="check" >&nbsp;向&nbsp;导&nbsp;</a>
+			<div  style="float:right;margin-top: 5px;">
+					<a href="javascript:void(0)" onclick="guide()" data-theme="f" >首次登录向导</a>
 				</div>
 			</div>
 		</div>
