- 删除多余标题

--- a/html/home.html
+++ b/html/home.html
@@ -124,10 +124,10 @@
 <body>
 	<div data-role="page" id="home"
 		style="background: url(../assets/home/bg_empty.jpg); -moz-background-size: cover; background-repeat: repeat;">
-		<div data-role="header">
+<!-- 		<div data-role="header">
 			<h1>首页</h1>
 		</div>
-		<div data-role="content" align="center">
+ -->		<div data-role="content" align="center">
 			<div class="swiper-container">
 				<div id="tpxwSwiper" class="swiper-wrapper" data-bind="foreach: list">
 					<div class="swiper-slide" >
@@ -188,7 +188,6 @@
 			</ul>
 			</div>
 			<p>
-			<br/>
 			<div>
 			<ul id="jtxwList" data-role="listview" data-theme="d"
 				style="word-wrap: break-word" data-bind="foreach: list">
@@ -204,7 +203,6 @@
 			</ul>
 			</div>
 			<p>
-			<br/>
 			<div>
 			<ul id="cydwxwList" data-role="listview" data-theme="d"
 				style="word-wrap: break-word" data-bind="foreach: list">
