调整安全生产值班表布局

--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -58,14 +58,11 @@ function loadListDetails() {
 
 	<div data-role="page" class="type-interior">
 
-		<div data-role="header" data-theme="b">
-		<p style="text-align:center;">安全生产值班表</p>
-		</div>
 		<div style=" margin-left: 15px;">
-		<table><tr ><td width="75%" height="20px" >
-			<input type="text" value="ada"/></td><td>
+		<table><tr ><td width="95%" height="20px" >
+			<input type="text" value=""/></td><td>
 		<a href="#search" data-role="button" data-inline="true" data-rel="dialog" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="f" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-inline ui-btn-up-c ui-btn-up-f">
-		<span class="ui-btn-inner" style="width:45px;height:20px;"><span class="ui-btn-text">搜索</span></span></a>
+		<span class="ui-btn-inner" style="width:45px;height:20px;"><span class="ui-btn-text" style="color: white">搜索</span></span></a>
 		</td></tr></table>
 		</div>
 
