--- a/html/login.html
+++ b/html/login.html
@@ -92,7 +92,7 @@
 						//$.cookie("itcode",username,{"expires":360000,path:"/"})
 						saveUserInfoToLocal(username);
 						
-						var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/home.html";	
+						var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/ipad.html";	
 						var componentURL="";
 						targetURL=encodeURI(targetURL);
 						
