--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -39,8 +39,6 @@ a {
 	<script src="../asset/js/bootstrap.min.js"></script>
 	<script src="../asset/js/echartsExample.js"></script>
 <script type="text/javascript">
-var j="";
-
 	$(document).ready(function(){
 		//加载收入完成图表数据
 		loadSrwcChart();
@@ -62,10 +60,11 @@ var j="";
                 "data":data,
                 "success":function(res){
                 	var json=JSON.parse(res);
+                	console.log(json);
                 	reportdata=json.reportdata;
                 	var seriesname=reportdata.seriesname.split('|');
                 	var seriesdata=reportdata.seriesdata.split('|');
-                	j=json.ljwcz;
+                	var srwc=seriesdata[1];
                 	var b=seriesname[0]+":"+seriesdata[0]+reportdata.primaryunit;
                 	document.getElementById("yusuan").innerHTML=b;
                 	var c=seriesname[1]+":"+seriesdata[1]+reportdata.primaryunit;
@@ -73,7 +72,7 @@ var j="";
                 	var d=seriesname[2]+":"+seriesdata[2]+"%";
                 	document.getElementById("bili").innerHTML=d;
                 	var ww=(Math.ceil((seriesdata[1])/100))*100;
-                	draw(ww);
+                	draw(ww,srwc);
                 },
                 "error":function(res){
                     alert("error:" + res);
@@ -81,7 +80,7 @@ var j="";
                 }
             });
     }
-	function draw(ww){
+	function draw(ww,srwc){
 		var option = {
 				toolbox : {
 					show : false,
@@ -157,7 +156,7 @@ var j="";
 				} ]
 			};
 			var myChart = echarts.init(document.getElementById('main'));
-			option.series[0].data[0].value =j;
+			option.series[0].data[0].value =srwc;
 			myChart.setOption(option);
 	}
 	</script>
